--- a/src/app/product/list-product/list-product.component.html
+++ b/src/app/product/list-product/list-product.component.html
@@ -71,243 +71,239 @@
 
 <!-- Modal -->
 <!-- Edit Product -->
-<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLongTitle">Update Product</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <div class="container">
-        <div class="row">
-          <div class="col-lg-12">
-            <form  [formGroup]="editForm">              
-              <div class="col-lg-12">
 
-                <div class="form-group row">
-                  <label for="name" class="col-sm-3 col-form-label">Title</label>
-                  <div class="col-sm-9">
-                    <input
-                      name="title"
-                      [(ngModel)]="editedProduct.title"
-                      formControlName="title"
-                      type="text"
-                      placeholder="Enter item name"
-                      class="form-control"
-                      id="title"
-                    
-                    
-                    />                     
+  <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLongTitle">Update Product</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="container">
+          <div class="row">
+            <div class="col-lg-12">
+              <form  [formGroup]="editForm">              
+                <div class="col-lg-12">
+  
+                  <div class="form-group row">
+                    <label for="name" class="col-sm-3 col-form-label">Title</label>
+                    <div class="col-sm-9">
+                      <input
+                        name="title"
+                        [(ngModel)]="editedProduct.title"
+                        formControlName="title"
+                        type="text"
+                        placeholder="Enter item name"
+                        class="form-control"
+                        id="title"
+                      
+                      
+                      />                     
+                    </div>
                   </div>
-                </div>
-
-                <div class="form-group row">
-                  <label for="unit" class="col-sm-3 col-form-label"
-                    >Unit
-                  </label>
-                  <div class="col-sm-9">
-                    <select
-                      class="form-control"
-                      formControlName="unit"
-                      id="unit"  
-                      [(ngModel)]="selectedUnit"  
-                    >
-                    
-                    <option *ngFor="let level of unit" [ngValue]="level">{{level.unitName}}</option>
-                       
-                    </select>
-                   
-                  </div>
-
-                  <!-- <select formControlName="unit" [(ngModel)]="selectedUnit">
-                    <option *ngFor="let level of unit" [ngValue]="level">{{level.unitName}}</option>
-                  </select> -->
-
-
-                </div>
-
-                <div class="form-group row">
-                  <label for="name" class="col-sm-3 col-form-label">Price</label>
-                  <div class="col-sm-9">
-                    <input
-                      name="price"
-                      [(ngModel)]="editedProduct.price"
-                      type="number"
-                      formControlName="price"
-                      placeholder="Enter item name"
-                      class="form-control"
-                      id="price"
-                    />
-                  
-                  </div>
-                </div>
-
-                <div class="form-group row">
-                  <label for="name" class="col-sm-3 col-form-label">Stock Left</label>
-                  <div class="col-sm-9">
-                    <input
-                      name="stockLeft"
-                      [(ngModel)]="editedProduct.stockLeft"
-                      type="number"
-                      formControlName="stockLeft"
-                      placeholder="Enter item name"
-                      class="form-control"
-                      id="stockLeft"
-                    
-                    
-                    />                     
-                  </div>
-                </div>
-
-
-                <div class="form-group row">
-                  <label for="discount" class="col-sm-3 col-form-label">Discount Percent</label>
-                  <div class="col-sm-9">
-                    <input
-                      name="stockLeft"
-                      [(ngModel)]="editedProduct.discount"
-                      type="number"
-                      formControlName="discount"
-                      placeholder="Enter Discount Percent"
-                      class="form-control"
-                      id="discount"                   
-                    
-                    />     
-                                    
-                  </div>
-                </div>
-
-
-                <div class="form-group row">
-                  <label for="name" class="col-sm-3 col-form-label">Image URL</label>
-                  <div class="col-sm-9">
-                    <input
-                      name="image"
-                      [(ngModel)]="editedProduct.image"
-                      formControlName="promoCodes"
-                      type="text"
-                      placeholder="Enter Image URL"
-                      class="form-control"
-                      id="image"                
-                    
-                    />                     
-                  </div>
-                </div>
-
-
-
-
-                <div class="form-group row">
-                  <label for="promoCodes" class="col-sm-3 col-form-label"
-                    >PromoCode
-                  </label>
-                  <!-- <div class="col-sm-9">
-                    <select
-                      class="form-control"
-                      formControlName="promoCodes"
-                      id="promoCodes" 
-                      [(ngModel)]="selectedPromoCode"                      
-                    >
+  
+                  <div class="form-group row">
+                    <label for="unit" class="col-sm-3 col-form-label"
+                      >Unit
+                    </label>
+                    <div class="col-sm-9">
+                      <select
+                        class="form-control"
+                        formControlName="unit"
+                        id="unit"  
+                        [(ngModel)]="selectedUnitObj"  
+                      >
+                      
+                      <option *ngFor="let level of unit" [ngValue]="level">{{level.unitName}}</option>
+                         
+                      </select>
                      
-
-                    <option *ngFor="let level of promoCodes" [ngValue]="level">{{level.promoCodes}}</option>
-
-
-                    </select>                   
-                  </div> -->
-
-
-
-                  <div class="col-sm-9">
-                    <select
-                      class="form-control"
-                      formControlName="promoCodes"
-                      id="promoCodes"  
-                      [(ngModel)]="selectedPromoCode"  
-                    >                    
-                    <option *ngFor="let promo of promoCodes" [ngValue]="promo">{{promo.promoCode}}</option>
-                    </select>
-                   
+                    </div>
+  
+                  
+  
+  
                   </div>
-
-
-                </div>
-
-                <div class="form-group row">
-                  <label for="category" class="col-sm-3 col-form-label"
-                    >Category
-                  </label>
-                  <div class="col-sm-9">
-                    <select
-                      class="form-control"
-                      formControlName="category"
-                      id="category"                       
-                    >
-                      <option *ngFor="let c of category" [value]="c.id">
-                        {{ c.categoryName }}
-                      </option>
-                    </select>
-                   
-                  </div>
-                </div>
-
-
-                <div class="form-group row">
-                  <label for="subscribable" class="col-sm-3 col-form-label"
-                    >Subscribable
-                  </label>
-                  <div class="col-sm-9">
-                    <select
-                      class="form-control"
-                      formControlName="subscribable"
-                      id="subscribable"
-                      [(ngModel)]="selectedUnit"                       
-                    >
-                      <option *ngFor="let s of subscribable" [value]="s.id">
-                        {{ s.state }}
-                      </option>
-                    </select>
-                   
-                  </div>
-                </div>
-
-
-                <div class="form-group row">
-                  <label for="description" class="col-sm-3 col-form-label">Description</label>
-                  <div class="col-sm-9">
-                    <input
-                      name="description"
-                      [(ngModel)]="editedProduct.description"
-                      formControlName="title"
-                      type="text"
-                      placeholder="Enter Description"
-                      class="form-control"
-                      id="description"
+  
+                  <div class="form-group row">
+                    <label for="name" class="col-sm-3 col-form-label">Price</label>
+                    <div class="col-sm-9">
+                      <input
+                        name="price"
+                        [(ngModel)]="editedProduct.price"
+                        type="number"
+                        formControlName="price"
+                        placeholder="Enter item name"
+                        class="form-control"
+                        id="price"
+                      />
                     
-                    
-                    />                     
+                    </div>
                   </div>
+  
+                  <div class="form-group row">
+                    <label for="name" class="col-sm-3 col-form-label">Stock Left</label>
+                    <div class="col-sm-9">
+                      <input
+                        name="stockLeft"
+                        [(ngModel)]="editedProduct.stockLeft"
+                        type="number"
+                        formControlName="stockLeft"
+                        placeholder="Enter item name"
+                        class="form-control"
+                        id="stockLeft"
+                      
+                      
+                      />                     
+                    </div>
+                  </div>
+  
+  
+                  <div class="form-group row">
+                    <label for="discount" class="col-sm-3 col-form-label">Discount Percent</label>
+                    <div class="col-sm-9">
+                      <input
+                        name="stockLeft"
+                        [(ngModel)]="editedProduct.discount"
+                        type="number"
+                        formControlName="discount"
+                        placeholder="Enter Discount Percent"
+                        class="form-control"
+                        id="discount"                   
+                      
+                      />     
+                                      
+                    </div>
+                  </div>
+  
+  
+                  <div class="form-group row">
+                    <label for="name" class="col-sm-3 col-form-label">Image URL</label>
+                    <div class="col-sm-9">
+                      <input
+                        name="image"
+                        [(ngModel)]="editedProduct.image"
+                        formControlName="image"
+                        type="text"
+                        placeholder="Enter Image URL"
+                        class="form-control"
+                        id="image"                
+                      
+                      />                     
+                    </div>
+                  </div>
+  
+  
+  
+  
+                  <div class="form-group row">
+                    <label for="promoCodes" class="col-sm-3 col-form-label"
+                      >PromoCode
+                    </label>  
+                    <div class="col-sm-9">
+                      <select
+                        class="form-control"
+                        formControlName="promoCode"
+                        id="promoCodes"  
+                        [(ngModel)]="selectedPromoCodeObj"  
+                      >                    
+                      <option *ngFor="let promo of promoList" [ngValue]="promo">
+                        {{promo.promoName}}
+                      </option>
+                      </select>                     
+                    </div> 
+                  </div>  
+                  
+                 
+
+
+
+                
+              
+
+
+
+  
+                  <div class="form-group row">
+                    <label for="category" class="col-sm-3 col-form-label"
+                      >Category
+                    </label>
+                    <div class="col-sm-9">
+                      <select
+                        class="form-control"
+                        formControlName="category"
+                        id="category"  
+                        [(ngModel)] = "selectedCategoryObj"                     
+                      >
+                        <option *ngFor="let cat of categoryList" [ngValue]="cat">
+                          {{ cat.categoryName }}
+                        </option>
+                      </select>
+                     
+                    </div>
+                  </div>
+  
+  
+                  <div class="form-group row">
+                    <label for="subscribable" class="col-sm-3 col-form-label"
+                      >Subscribable
+                    </label>
+                    <div class="col-sm-9">
+                      <select
+                        class="form-control"
+                        formControlName="subscribable"
+                        id="subscribable"
+                        [(ngModel)]="selectedisSubscribableObj"                       
+                      >
+                        <option *ngFor="let sub of subscribable" [ngValue]="sub">
+                          {{ sub.value }}
+                        </option>
+                      </select>
+                     
+                    </div>
+                  </div>
+
+
+  
+  
+                  <div class="form-group row">
+                    <label for="description" class="col-sm-3 col-form-label">Description</label>
+                    <div class="col-sm-9">
+                      <input
+                        name="description"
+                        [(ngModel)]="editedProduct.description"
+                        formControlName="title"
+                        type="text"
+                        placeholder="Enter Description"
+                        class="form-control"
+                        id="description"
+                      
+                      
+                      />                     
+                    </div>
+                  </div>
+  
+  
+  
+  
                 </div>
-
-
-
-
-              </div>
-            </form>             
-          </div>
-        </div>   
-        </div>     
-      </div>      
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal"  #closebutton>Close</button>
-        <button type="button" class="btn btn-primary" (click)="updateProduct(editedProduct)">Update</button>
+              </form>             
+            </div>
+          </div>   
+          </div>     
+        </div>      
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal"  #closebutton>Close</button>
+          <button type="button" class="btn btn-primary" (click)="updateProduct(editedProduct)">Update</button>
+        </div>
       </div>
     </div>
   </div>
-</div>
+
+
 
 
 
@@ -470,7 +466,7 @@
                             id="category"
                             [(ngModel)]="addProduct.category"                         
                           >
-                            <option *ngFor="let c of category" [value]="c.categoryName">
+                            <option *ngFor="let c of categoryList" [value]="c.categoryName">
                               {{ c.categoryName }}
                             </option>
                           </select>
